<?xml version="1.0"?>
<package format="2">
  <name>switch_mode_client</name>
  <version>0.0.0</version>
  <description>The switch_mode_client package</description>

  <maintainer email="karl.kruusamae@ut.ee">Karl Kruusamäe</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>switch_mode_srvs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>switch_mode_srvs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>switch_mode_srvs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
